--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <style>
       .phisics {
-        display: flex;
-        justify-content: center;
         margin-top: 70px;
-        padding-left: 37%;
+        margin-bottom: 50px;
+        display: flex;
       }
       .progres {
-        border-radius: 40px;
+        border-radius: 100px;
         background-color: orange;
         padding-bottom: 50px;
       }
@@ -18,17 +17,37 @@
         padding-top: 100px;
         margin-bottom: 70px;
       }
+      .footer {
+        background-color: rgb(108, 108, 108);
+        padding-bottom: 75px;
+        padding-top: 75px;
+      }
+      .footer-buton {
+        padding-top: 5px;
+        padding-left: 50px;
+        display: flex;
+        color: #ff8a1d;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 120.006%;
+        background-color: #fff;
+        border-radius: 8px;
+        border: 4px solid #ff8a1d;
+        width: 155px;
+        height: 39px;
+        flex-shrink: 0;
+      }
     </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
+    <link rel="stylesheet" href="./index.scss">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style.scss/main.scss" />
   </head>
   <body>
     <header>
@@ -95,7 +114,9 @@
     <main>
       <section class="progres">
         <div class="container">
-          <h1 class="progres__link">you have completed 50% of your studies, congratulations</h1>
+          <h1 class="progres__link">
+            you have completed 50% of your studies, congratulations
+          </h1>
           <div
             class="progress"
             role="progressbar"
@@ -121,14 +142,37 @@
               <a href="#" class="btn btn-primary">I want this!</a>
             </div>
           </div>
+          <div class="card" style="width: 18rem">
+            <img src="./img/physics.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Learn by yourself</h5>
+              <p class="card-text">
+                Watch good quality video courses about physics anywhere and
+                anytime!
+              </p>
+              <a href="#" class="btn btn-primary">I want this!</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img src="./img/physics.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Learn by yourself</h5>
+              <p class="card-text">
+                Watch good quality video courses about physics anywhere and
+                anytime!
+              </p>
+              <a href="#" class="btn btn-primary">I want this!</a>
+            </div>
+          </div>
         </div>
       </section>
-      <section>
+      <footer class="footer">
         <div class="container">
           <label for="customRange1" class="form-label">Example range</label>
           <input type="range" class="form-range" id="customRange1" />
+          <button class="footer-buton" type="submit">send</button>
         </div>
-      </section>
+      </footer>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
